Update GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <img src="https://via.placeholder.com/150" alt="Your photo">
   <h1>Hello, I'm [Your Name]</h1>
   <p>Welcome to my personal website! I’m a [your profession/interests].</p>
-  <p>Find me on <a href="https://github.com/username">GitHub</a>.</p>
+  <p>Find me on <a href="https://github.com/CHINMAYA0987">GitHub</a>.</p>
 </body>
 </html>
