--- a/index.html
+++ b/index.html
@@ -3,18 +3,174 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Personal Webpage</title>
+  <title>Your Name | Resume</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #fafafa; text-align: center; padding: 50px; }
-    img { border-radius: 50%; width: 150px; }
-    h1 { color: #333; }
-    p { color: #555; max-width: 600px; margin: auto; }
+    /* Basic Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      background: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    header {
+      background: #004aad;
+      color: #fff;
+      padding: 2rem 0;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 2.2rem;
+      margin-bottom: 0.3rem;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      color: #e0e0e0;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    section {
+      margin-bottom: 2rem;
+    }
+
+    h2 {
+      color: #004aad;
+      border-bottom: 2px solid #004aad;
+      padding-bottom: 0.3rem;
+      margin-bottom: 1rem;
+      font-size: 1.5rem;
+    }
+
+    .info, .skills, .experience, .education {
+      margin-bottom: 1.5rem;
+    }
+
+    .info p, .education p, .experience p {
+      margin-bottom: 0.5rem;
+    }
+
+    .job {
+      margin-bottom: 1rem;
+    }
+
+    .job h3 {
+      font-size: 1.1rem;
+      color: #222;
+    }
+
+    .job span {
+      display: block;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    ul {
+      list-style: square inside;
+      margin-left: 1rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem 0;
+      color: #555;
+      font-size: 0.9rem;
+      background: #f1f1f1;
+    }
+
+    a {
+      color: #004aad;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      main {
+        padding: 1rem;
+      }
+      header h1 {
+        font-size: 1.8rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <img src="https://via.placeholder.com/150" alt="Your photo">
-  <h1>Hello, I'm [Your Name]</h1>
-  <p>Welcome to my personal website! I’m a [your profession/interests].</p>
-  <p>Find me on <a href="https://github.com/CHINMAYA0987">GitHub</a>.</p>
+
+  <header>
+    <h1>Your Name</h1>
+    <p>Web Developer | Designer | Programmer</p>
+    <p><a href="mailto:your.email@example.com" style="color: #fff;">your.email@example.com</a> | 
+       <a href="https://linkedin.com/in/yourprofile" style="color: #fff;">LinkedIn</a> | 
+       <a href="https://github.com/yourusername" style="color: #fff;">GitHub</a></p>
+  </header>
+
+  <main>
+    <section class="info">
+      <h2>Profile</h2>
+      <p>Passionate and detail-oriented web developer with experience in creating responsive and user-friendly websites. Skilled in HTML, CSS, JavaScript, and modern frameworks.</p>
+    </section>
+
+    <section class="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>HTML5, CSS3, JavaScript (ES6+)</li>
+        <li>React, Node.js, Express</li>
+        <li>Git, GitHub, REST APIs</li>
+        <li>Responsive Web Design</li>
+        <li>Python, SQL</li>
+      </ul>
+    </section>
+
+    <section class="experience">
+      <h2>Experience</h2>
+
+      <div class="job">
+        <h3>Front-End Developer - XYZ Company</h3>
+        <span>Jan 2022 – Present</span>
+        <ul>
+          <li>Developed and maintained responsive web applications using React and Tailwind CSS.</li>
+          <li>Collaborated with UX/UI designers to enhance the user experience.</li>
+        </ul>
+      </div>
+
+      <div class="job">
+        <h3>Web Developer Intern - ABC Studio</h3>
+        <span>Jun 2021 – Dec 2021</span>
+        <ul>
+          <li>Assisted in building WordPress websites for small business clients.</li>
+          <li>Optimized pages for SEO and performance improvements.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="education">
+      <h2>Education</h2>
+      <p><strong>B.S. in Computer Science</strong> — University Name (2018–2022)</p>
+      <p>Graduated with Honors | GPA: 3.8/4.0</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Your Name | Built with ❤️ using HTML & CSS</p>
+  </footer>
+
 </body>
 </html>
