Revise resume details and add research section
Updated personal information and added research interests.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Resume</title>
+  <title>Chinmaya Bikram Pattanaik | Resume</title>
   <style>
     /* Basic Reset */
     * {
@@ -57,24 +57,20 @@
       font-size: 1.5rem;
     }
 
-    .info, .skills, .experience, .education {
+    .info, .skills, .experience, .education, .research {
       margin-bottom: 1.5rem;
     }
 
-    .info p, .education p, .experience p {
-      margin-bottom: 0.5rem;
-    }
-
-    .job {
+    .job, .research-item {
       margin-bottom: 1rem;
     }
 
-    .job h3 {
+    .job h3, .research-item h3 {
       font-size: 1.1rem;
       color: #222;
     }
 
-    .job span {
+    .job span, .research-item span {
       display: block;
       font-size: 0.9rem;
       color: #555;
@@ -115,61 +111,79 @@
 <body>
 
   <header>
-    <h1>Your Name</h1>
-    <p>Web Developer | Designer | Programmer</p>
-    <p><a href="mailto:your.email@example.com" style="color: #fff;">your.email@example.com</a> | 
-       <a href="https://linkedin.com/in/yourprofile" style="color: #fff;">LinkedIn</a> | 
-       <a href="https://github.com/yourusername" style="color: #fff;">GitHub</a></p>
+    <h1>Chinmaya Bikram Pattanaik</h1>
+    <p>PhD Student | IISER Bhopal</p>
+    <p><a href="mailto:chinmaya.bikram@iiserb.ac.in" style="color: #fff;">chinmaya.bikram@iiserb.ac.in</a> | 
+       <a href="https://www.linkedin.com/in/chinmaya-bikram-pattanaik" style="color: #fff;">LinkedIn</a> | 
+       <a href="https://github.com/chinmayabikram" style="color: #fff;">GitHub</a></p>
   </header>
 
   <main>
     <section class="info">
       <h2>Profile</h2>
-      <p>Passionate and detail-oriented web developer with experience in creating responsive and user-friendly websites. Skilled in HTML, CSS, JavaScript, and modern frameworks.</p>
+      <p>I am a PhD student at the Indian Institute of Science Education and Research (IISER) Bhopal. 
+         My research interests include computational chemistry, molecular simulations, and data-driven modeling 
+         in physical sciences. I am passionate about interdisciplinary research that combines theory, computation, and data analysis.</p>
+    </section>
+
+    <section class="research">
+      <h2>Research Interests</h2>
+      <ul>
+        <li>Computational Chemistry and Molecular Dynamics</li>
+        <li>Machine Learning in Physical Sciences</li>
+        <li>Quantum Chemistry Simulations</li>
+        <li>Data Analysis and Visualization</li>
+      </ul>
     </section>
 
     <section class="skills">
-      <h2>Skills</h2>
+      <h2>Technical Skills</h2>
       <ul>
-        <li>HTML5, CSS3, JavaScript (ES6+)</li>
-        <li>React, Node.js, Express</li>
-        <li>Git, GitHub, REST APIs</li>
-        <li>Responsive Web Design</li>
-        <li>Python, SQL</li>
+        <li>Programming: Python, C/C++, Bash</li>
+        <li>Tools: VMD, Gaussian, LAMMPS, GROMACS, MATLAB</li>
+        <li>Data Analysis: NumPy, Pandas, Matplotlib, SciPy</li>
+        <li>Version Control: Git, GitHub</li>
+        <li>Operating Systems: Linux, Windows</li>
       </ul>
+    </section>
+
+    <section class="education">
+      <h2>Education</h2>
+      <p><strong>Ph.D. in Chemistry</strong> — Indian Institute of Science Education and Research (IISER) Bhopal</p>
+      <p><em>Expected Graduation:</em> 2027</p>
+
+      <p><strong>M.Sc. in Chemistry</strong> — [Your University Name]</p>
+      <p><em>Graduated:</em> [Year]</p>
+
+      <p><strong>B.Sc. in Chemistry</strong> — [Your University Name]</p>
+      <p><em>Graduated:</em> [Year]</p>
     </section>
 
     <section class="experience">
       <h2>Experience</h2>
 
       <div class="job">
-        <h3>Front-End Developer - XYZ Company</h3>
-        <span>Jan 2022 – Present</span>
+        <h3>Research Scholar — IISER Bhopal</h3>
+        <span>[Start Year] – Present</span>
         <ul>
-          <li>Developed and maintained responsive web applications using React and Tailwind CSS.</li>
-          <li>Collaborated with UX/UI designers to enhance the user experience.</li>
+          <li>Conducting computational simulations to study molecular interactions and reaction mechanisms.</li>
+          <li>Developing and applying machine learning methods for chemical property prediction.</li>
         </ul>
       </div>
 
       <div class="job">
-        <h3>Web Developer Intern - ABC Studio</h3>
-        <span>Jun 2021 – Dec 2021</span>
+        <h3>Teaching Assistant — IISER Bhopal</h3>
+        <span>[Year] – [Year]</span>
         <ul>
-          <li>Assisted in building WordPress websites for small business clients.</li>
-          <li>Optimized pages for SEO and performance improvements.</li>
+          <li>Assisted in undergraduate laboratory and tutorial sessions.</li>
+          <li>Guided students in experimental techniques and data interpretation.</li>
         </ul>
       </div>
-    </section>
-
-    <section class="education">
-      <h2>Education</h2>
-      <p><strong>B.S. in Computer Science</strong> — University Name (2018–2022)</p>
-      <p>Graduated with Honors | GPA: 3.8/4.0</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Your Name | Built with ❤️ using HTML & CSS</p>
+    <p>© 2025 Chinmaya Bikram Pattanaik | Built with ❤️ using HTML & CSS</p>
   </footer>
 
 </body>
