Revise personal profile and academic details
Updated personal information, research interests, education, and experience sections in index.html.

--- a/index.html
+++ b/index.html
@@ -111,28 +111,33 @@
 <body>
 
   <header>
-    <h1>Chinmaya Bikram Pattanaik</h1>
-    <p>PhD Student | IISER Bhopal</p>
-    <p><a href="mailto:chinmaya.bikram@iiserb.ac.in" style="color: #fff;">chinmaya.bikram@iiserb.ac.in</a> | 
-       <a href="https://www.linkedin.com/in/chinmaya-bikram-pattanaik" style="color: #fff;">LinkedIn</a> | 
-       <a href="https://github.com/chinmayabikram" style="color: #fff;">GitHub</a></p>
-  </header>
+  <h1>Chinmaya Bikram Pattanaik</h1>
+  <img src="profile.jpg" alt="Chinmaya Bikram Pattanaik" class="profile-img" />
+  <p>PhD Student | IISER Bhopal</p>
+  <p>
+    <a href="mailto:chinmaya24@iiserb.ac.in" style="color: #fff;">chinmaya24@iiserb.ac.in</a> | 
+    <a href="mailto:chinmayabikram@gmail.com" style="color: #fff;">chinmayabikram@gmail.com</a> |
+    <a href="https://in.linkedin.com/in/chinmaya-pattanaik-8908191b4" style="color: #fff;">LinkedIn</a> | 
+    <a href="https://github.com/CHINMAYA0987" style="color: #fff;">GitHub</a>
+  </p>
+</header>
+
 
   <main>
     <section class="info">
       <h2>Profile</h2>
       <p>I am a PhD student at the Indian Institute of Science Education and Research (IISER) Bhopal. 
-         My research interests include computational chemistry, molecular simulations, and data-driven modeling 
-         in physical sciences. I am passionate about interdisciplinary research that combines theory, computation, and data analysis.</p>
+         I am doing my research under Dr. P.B. Sujit in the domain of Robotics path planning, navigation and controls.
+         My research interest also includes 3D reconstruction, SLAM and Perception based models</p>
     </section>
 
     <section class="research">
       <h2>Research Interests</h2>
       <ul>
-        <li>Computational Chemistry and Molecular Dynamics</li>
-        <li>Machine Learning in Physical Sciences</li>
-        <li>Quantum Chemistry Simulations</li>
-        <li>Data Analysis and Visualization</li>
+        <li>Navigation and Path Planning</li>
+        <li>Controls</li>
+        <li>3D Reconstructions</li>
+        <li>SLAM</li>
       </ul>
     </section>
 
@@ -140,8 +145,7 @@
       <h2>Technical Skills</h2>
       <ul>
         <li>Programming: Python, C/C++, Bash</li>
-        <li>Tools: VMD, Gaussian, LAMMPS, GROMACS, MATLAB</li>
-        <li>Data Analysis: NumPy, Pandas, Matplotlib, SciPy</li>
+        <li>Data Analysis: NumPy, Pandas, Matplotlib, SciPy, MATLAB</li>
         <li>Version Control: Git, GitHub</li>
         <li>Operating Systems: Linux, Windows</li>
       </ul>
@@ -149,27 +153,20 @@
 
     <section class="education">
       <h2>Education</h2>
-      <p><strong>Ph.D. in Chemistry</strong> — Indian Institute of Science Education and Research (IISER) Bhopal</p>
-      <p><em>Expected Graduation:</em> 2027</p>
+      <p><strong>Ph.D. in EECS</strong> — Indian Institute of Science Education and Research (IISER) Bhopal</p>
+      <p><em>Ongoing:</em>Jan-2025 onwards</p>
 
-      <p><strong>M.Sc. in Chemistry</strong> — [Your University Name]</p>
-      <p><em>Graduated:</em> [Year]</p>
+      <p><strong>M.Tech in Cyber Security</strong> — [National Institute of Technology (NIT), Agartala]</p>
+      <p><em>Graduated:</em> [2024]</p>
 
-      <p><strong>B.Sc. in Chemistry</strong> — [Your University Name]</p>
-      <p><em>Graduated:</em> [Year]</p>
+      <p><strong>B.Tech in Computer Science and Engineering</strong> — [SOA University, Bhubaneshwar]</p>
+      <p><em>Graduated:</em> [2022]</p>
     </section>
 
     <section class="experience">
       <h2>Experience</h2>
 
-      <div class="job">
-        <h3>Research Scholar — IISER Bhopal</h3>
-        <span>[Start Year] – Present</span>
-        <ul>
-          <li>Conducting computational simulations to study molecular interactions and reaction mechanisms.</li>
-          <li>Developing and applying machine learning methods for chemical property prediction.</li>
-        </ul>
-      </div>
+
 
       <div class="job">
         <h3>Teaching Assistant — IISER Bhopal</h3>
@@ -183,7 +180,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Chinmaya Bikram Pattanaik | Built with ❤️ using HTML & CSS</p>
+    <p>© 2025 Chinmaya Bikram Pattanaik|</p>
   </footer>
 
 </body>
