--- a/index.html
+++ b/index.html
@@ -13,17 +13,33 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
+    /* Background with a robot image */
     body {
-      background: #f9f9f9;
-      color: #333;
+      background: url('robot-bg.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
       line-height: 1.6;
     }
 
     header {
-      background: #004aad;
+      position: relative;
+      background: rgba(0, 0, 0, 0.6); /* transparent overlay */
       color: #fff;
-      padding: 2rem 0;
+      padding: 2rem 0 1rem 0;
       text-align: center;
+    }
+
+    /* Profile image top-left */
+    .profile-img {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #fff;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     }
 
     header h1 {
@@ -39,10 +55,10 @@
     main {
       max-width: 900px;
       margin: 2rem auto;
-      background: #fff;
+      background: rgba(0, 0, 0, 0.6); /* semi-transparent box */
       padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
     }
 
     section {
@@ -50,30 +66,15 @@
     }
 
     h2 {
-      color: #004aad;
-      border-bottom: 2px solid #004aad;
+      color: #00aaff;
+      border-bottom: 2px solid #00aaff;
       padding-bottom: 0.3rem;
       margin-bottom: 1rem;
       font-size: 1.5rem;
     }
 
-    .info, .skills, .experience, .education, .research {
-      margin-bottom: 1.5rem;
-    }
-
-    .job, .research-item {
-      margin-bottom: 1rem;
-    }
-
-    .job h3, .research-item h3 {
-      font-size: 1.1rem;
-      color: #222;
-    }
-
-    .job span, .research-item span {
-      display: block;
-      font-size: 0.9rem;
-      color: #555;
+    p, li {
+      color: #f0f0f0;
     }
 
     ul {
@@ -81,21 +82,21 @@
       margin-left: 1rem;
     }
 
-    footer {
-      text-align: center;
-      padding: 1rem 0;
-      color: #555;
-      font-size: 0.9rem;
-      background: #f1f1f1;
-    }
-
     a {
-      color: #004aad;
+      color: #00aaff;
       text-decoration: none;
     }
 
     a:hover {
       text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem 0;
+      color: #ccc;
+      font-size: 0.9rem;
+      background: rgba(0, 0, 0, 0.6);
     }
 
     @media (max-width: 600px) {
@@ -105,30 +106,33 @@
       header h1 {
         font-size: 1.8rem;
       }
+      .profile-img {
+        width: 80px;
+        height: 80px;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-  <h1>Chinmaya Bikram Pattanaik</h1>
-  <img src="profile.jpg" alt="Chinmaya Bikram Pattanaik" class="profile-img" />
-  <p>PhD Student | IISER Bhopal</p>
-  <p>
-    <a href="mailto:chinmaya24@iiserb.ac.in" style="color: #fff;">chinmaya24@iiserb.ac.in</a> | 
-    <a href="mailto:chinmayabikram@gmail.com" style="color: #fff;">chinmayabikram@gmail.com</a> |
-    <a href="https://in.linkedin.com/in/chinmaya-pattanaik-8908191b4" style="color: #fff;">LinkedIn</a> | 
-    <a href="https://github.com/CHINMAYA0987" style="color: #fff;">GitHub</a>
-  </p>
-</header>
-
+    <img src="profile.jpg" alt="Chinmaya Bikram Pattanaik" class="profile-img" />
+    <h1>Chinmaya Bikram Pattanaik</h1>
+    <p>PhD Student | IISER Bhopal</p>
+    <p>
+      <a href="mailto:chinmaya24@iiserb.ac.in">chinmaya24@iiserb.ac.in</a> | 
+      <a href="mailto:chinmayabikram@gmail.com">chinmayabikram@gmail.com</a> |
+      <a href="https://in.linkedin.com/in/chinmaya-pattanaik-8908191b4">LinkedIn</a> | 
+      <a href="https://github.com/CHINMAYA0987">GitHub</a>
+    </p>
+  </header>
 
   <main>
     <section class="info">
       <h2>Profile</h2>
       <p>I am a PhD student at the Indian Institute of Science Education and Research (IISER) Bhopal. 
-         I am doing my research under Dr. P.B. Sujit in the domain of Robotics path planning, navigation and controls.
-         My research interest also includes 3D reconstruction, SLAM and Perception based models</p>
+         I am doing my research under Dr. P.B. Sujit in the domain of robotics path planning, navigation and controls.
+         My research interests also include 3D reconstruction, SLAM, and perception-based models.</p>
     </section>
 
     <section class="research">
@@ -136,7 +140,7 @@
       <ul>
         <li>Navigation and Path Planning</li>
         <li>Controls</li>
-        <li>3D Reconstructions</li>
+        <li>3D Reconstruction</li>
         <li>SLAM</li>
       </ul>
     </section>
@@ -154,23 +158,20 @@
     <section class="education">
       <h2>Education</h2>
       <p><strong>Ph.D. in EECS</strong> — Indian Institute of Science Education and Research (IISER) Bhopal</p>
-      <p><em>Ongoing:</em>Jan-2025 onwards</p>
+      <p><em>Ongoing:</em> Jan 2025 – Present</p>
 
-      <p><strong>M.Tech in Cyber Security</strong> — [National Institute of Technology (NIT), Agartala]</p>
-      <p><em>Graduated:</em> [2024]</p>
+      <p><strong>M.Tech in Cyber Security</strong> — National Institute of Technology (NIT), Agartala</p>
+      <p><em>Graduated:</em> 2024</p>
 
-      <p><strong>B.Tech in Computer Science and Engineering</strong> — [SOA University, Bhubaneshwar]</p>
-      <p><em>Graduated:</em> [2022]</p>
+      <p><strong>B.Tech in Computer Science and Engineering</strong> — SOA University, Bhubaneswar</p>
+      <p><em>Graduated:</em> 2022</p>
     </section>
 
     <section class="experience">
       <h2>Experience</h2>
-
-
-
       <div class="job">
         <h3>Teaching Assistant — IISER Bhopal</h3>
-        <span>[Year] – [Year]</span>
+        <span>2025 – Present</span>
         <ul>
           <li>Assisted in undergraduate laboratory and tutorial sessions.</li>
           <li>Guided students in experimental techniques and data interpretation.</li>
@@ -180,7 +181,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Chinmaya Bikram Pattanaik|</p>
+    <p>© 2025 Chinmaya Bikram Pattanaik | Built with ❤️ using HTML & CSS</p>
   </footer>
 
 </body>
